--- a/turmas.html
+++ b/turmas.html
@@ -5,76 +5,96 @@
   <title>Turmas</title>
   <style>
     table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    input[type="text"] { width: 100%; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+    th { background-color: #f2f2f2; }
+    input[type="text"] { width: 90%; }
+    button { padding: 5px 10px; }
   </style>
 </head>
 <body>
-  <h2>Gerenciamento de Turmas</h2>
-  <p id="email"></p>
+  <h2>Gerenciar Turmas</h2>
   <table id="turmasTable">
     <thead>
       <tr>
         <th>ID</th>
         <th>Descrição</th>
-        <th>Ativo</th>
+        <th>Status</th>
+        <th>Ação</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
+  <h3>Nova Turma</h3>
+  <input type="text" id="novaDescricao" placeholder="Descrição">
+  <label>
+    <input type="checkbox" id="novaStatus" checked> Ativo
+  </label>
+  <button onclick="criarTurma()">Criar</button>
+
   <script>
-    const SHEET_ID = '1G9qfzZc-AfDQdt5x8doNsQzeOEyXUbGWOzMPIOzrytQ';
-    const SHEET_NAME = 'turmas';
-    const API_KEY = 'AIzaSyAiUcAlkdg3qPln6MzxRO0TGyJnLcjocP0';
+    const scriptURL = 'COLE_AQUI_A_URL_DO_SCRIPT_WEB_APP';
 
-    const userEmail = new URLSearchParams(window.location.search).get('email');
-    document.getElementById("email").innerText = `Logado como: ${userEmail}`;
-
-    const tableBody = document.querySelector("#turmasTable tbody");
-
-    function loadTurmas() {
-      const url = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${SHEET_NAME}?key=${API_KEY}`;
-
-      fetch(url)
-        .then(response => response.json())
+    function carregarTurmas() {
+      fetch(scriptURL)
+        .then(res => res.json())
         .then(data => {
-          const rows = data.values || [];
-          tableBody.innerHTML = "";
-          for (let i = 1; i < rows.length; i++) {
-            const [id, descricao, ativo] = rows[i];
-            const tr = document.createElement("tr");
+          const tbody = document.querySelector('#turmasTable tbody');
+          tbody.innerHTML = '';
+          for (let i = 1; i < data.length; i++) {
+            const [id, descricao, status] = data[i];
+            const row = document.createElement('tr');
 
-            tr.innerHTML = `
+            row.innerHTML = `
               <td>${id}</td>
-              <td><input type="text" value="${descricao}" onchange="updateDescricao(${i + 1}, this.value)" /></td>
-              <td><input type="checkbox" ${ativo === "TRUE" ? "checked" : ""} onchange="updateStatus(${i + 1}, this.checked)" /></td>
+              <td><input type="text" value="${descricao}" onchange="atualizar(${id}, this.value, null)"></td>
+              <td>
+                <input type="checkbox" ${status ? 'checked' : ''} onchange="atualizar(${id}, null, this.checked)">
+              </td>
+              <td>
+                <button onclick="atualizar(${id}, document.querySelectorAll('tr')[${i}].children[1].children[0].value, document.querySelectorAll('tr')[${i}].children[2].children[0].checked)">Salvar</button>
+              </td>
             `;
-
-            tableBody.appendChild(tr);
+            tbody.appendChild(row);
           }
         });
     }
 
-    function updateDescricao(row, value) {
-      updateSheetCell(`B${row}`, value);
-    }
-
-    function updateStatus(row, value) {
-      updateSheetCell(`C${row}`, value ? "TRUE" : "FALSE");
-    }
-
-    function updateSheetCell(cell, value) {
-      fetch(`https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${SHEET_NAME}!${cell}?valueInputOption=RAW&key=${API_KEY}`, {
-        method: "PUT",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ values: [[value]] })
-      }).then(res => {
-        if (!res.ok) alert("Erro ao atualizar célula");
+    function atualizar(id, descricao, status) {
+      const params = new URLSearchParams({
+        action: 'update',
+        id,
+        description: descricao ?? '',
+        status: status ?? false
       });
+
+      fetch(scriptURL, { method: 'POST', body: params })
+        .then(res => res.text())
+        .then(() => carregarTurmas());
     }
 
-    loadTurmas();
+    function criarTurma() {
+      const descricao = document.getElementById('novaDescricao').value;
+      const status = document.getElementById('novaStatus').checked;
+
+      if (!descricao) return alert("Descrição é obrigatória!");
+
+      const params = new URLSearchParams({
+        action: 'create',
+        description: descricao,
+        status
+      });
+
+      fetch(scriptURL, { method: 'POST', body: params })
+        .then(res => res.text())
+        .then(() => {
+          document.getElementById('novaDescricao').value = '';
+          document.getElementById('novaStatus').checked = true;
+          carregarTurmas();
+        });
+    }
+
+    window.onload = carregarTurmas;
   </script>
 </body>
 </html>
