--- a/turmas.html
+++ b/turmas.html
@@ -33,7 +33,7 @@
   <button onclick="criarTurma()">Criar</button>
 
   <script>
-    const scriptURL = 'COLE_AQUI_A_URL_DO_SCRIPT_WEB_APP';
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbylGL_Cx-Bg8IJ82myN6SMxTmwHybT2-5mIucRzHgfiqsJfoVudIszL4gubvvxz_BjXIQ/exec';
 
     function carregarTurmas() {
       fetch(scriptURL)
