--- a/turmas.html
+++ b/turmas.html
@@ -9,6 +9,33 @@
     th { background-color: #f2f2f2; }
     input[type="text"] { width: 90%; }
     button { padding: 5px 10px; }
+    
+  #toast-container {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 1000;
+  }
+
+  .toast {
+    padding: 12px 20px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    opacity: 0.95;
+    animation: slideIn 0.3s ease forwards;
+  }
+
+  .toast.success { background-color: #4CAF50; }
+  .toast.error { background-color: #F44336; }
+
+  @keyframes slideIn {
+    from { transform: translateX(100%); opacity: 0; }
+    to { transform: translateX(0); opacity: 0.95; }
+  }
+
   </style>
 </head>
 <body>
