--- a/turmas.html
+++ b/turmas.html
@@ -122,6 +122,20 @@
     }
 
     window.onload = carregarTurmas;
+    function showToast(message, type = 'success') {
+  const container = document.getElementById('toast-container');
+  const toast = document.createElement('div');
+  toast.className = `toast ${type}`;
+  toast.innerText = message;
+
+  container.appendChild(toast);
+
+  setTimeout(() => {
+    toast.style.opacity = '0';
+    setTimeout(() => toast.remove(), 300);
+  }, 3000);
+}
+
   </script>
 <div id="toast-container"></div>
 </body>
