--- a/turmas.html
+++ b/turmas.html
@@ -88,9 +88,13 @@
             const row = document.createElement('tr');
             row.innerHTML = `
               <td>${id}</td>
-              <td><input type="text" value="${descricao}" onchange="atualizar(${id}, this.value, null)"></td>
-              <td><input type="checkbox" ${status === true ? 'checked' : ''} onchange="atualizar(${id}, null, this.checked)"></td>
-              <td><button onclick="atualizar(${id}, document.querySelectorAll('tr')[${i}].children[1].children[0].value, document.querySelectorAll('tr')[${i}].children[2].children[0].checked)">Salvar</button></td>
+              <td><input type="text" value="${descricao}"></td>
+              <td><input type="checkbox" ${status === true ? 'checked' : ''}></td>
+              <td>
+                <button onclick="atualizar(${id}, 
+                  this.closest('tr').children[1].children[0].value, 
+                  this.closest('tr').children[2].children[0].checked)">Salvar</button>
+              </td>
             `;
             tbody.appendChild(row);
           }
