--- a/turmas.html
+++ b/turmas.html
@@ -3,40 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Turmas</title>
-  <style>
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-    th { background-color: #f2f2f2; }
-    input[type="text"] { width: 90%; }
-    button { padding: 5px 10px; }
-
-    /* Toast styles */
-    #toast-container {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 1000;
-    }
-
-    .toast {
-      padding: 12px 20px;
-      margin-bottom: 10px;
-      border-radius: 5px;
-      color: white;
-      font-weight: bold;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      opacity: 0.95;
-      animation: slideIn 0.3s ease forwards;
-    }
-
-    .toast.success { background-color: #4CAF50; }
-    .toast.error { background-color: #F44336; }
-
-    @keyframes slideIn {
-      from { transform: translateX(100%); opacity: 0; }
-      to { transform: translateX(0); opacity: 0.95; }
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <h2>Gerenciar Turmas</h2>
