--- a/turmas.html
+++ b/turmas.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Turmas</title>
+  <title>Colégio Cooperativista de Poá | Turmas</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h2>Gerenciar Turmas</h2>
+  <h2>Turmas</h2>
   <table id="turmasTable">
     <thead>
       <tr>
