--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Validação de E-mail via Planilha Google</title>
+  <title>Colágio Cooperativista de Poá | Login</title>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script>
     let userEmail = "";
@@ -58,7 +58,7 @@
   </script>
 </head>
 <body>
-  <h2>Login com Google e Verificação de E-mail</h2>
+  <h2>Acesso para professores: Validação de Login Google</h2>
   <div id="buttonDiv"></div>
   <p id="email"></p>
   <p id="result" style="font-weight: bold;"></p>
