--- a/login.html
+++ b/login.html
@@ -66,5 +66,10 @@
   <div id="buttonDiv"></div>
   <p id="email"></p>
   <p id="result" style="font-weight: bold;"></p>
+
+  <footer>
+    <p>© 2025 Shiv BI. Todos os direitos reservados.</p>
+  </footer>
 </body>
+
 </html>
