--- a/login.html
+++ b/login.html
@@ -64,7 +64,10 @@
     
   </header>
 <h2>Área de acesso para professores e coordenação</h2>
+  <div class="login-container">
   <div id="buttonDiv"></div>
+</div>
+
   <p id="email" style="text-align: center; margin-top: 1rem;"></p>
   <p id="result" style="font-weight: bold; text-align: center;"></p>
 
