--- a/login.html
+++ b/login.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Colágio Cooperativista de Poá | Login</title>
+  <title>Colégio Cooperativista de Poá | Login</title>
   <link rel="stylesheet" href="home.css" />
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script>
@@ -61,12 +62,12 @@
 <body>
   <header>
     <h1>Colégio Cooperativista de Poá</h1>
-    
   </header>
-<h2>Área de acesso para professores e coordenação</h2>
+
+  <h2 style="text-align: center; margin-top: 1rem;">Área de acesso para professores e coordenação</h2>
   <div class="login-container">
-  <div id="buttonDiv"></div>
-</div>
+    <div id="buttonDiv"></div>
+  </div>
 
   <p id="email" style="text-align: center; margin-top: 1rem;"></p>
   <p id="result" style="font-weight: bold; text-align: center;"></p>
