--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
 
   <main>
     <h2>Bem-vindo(a)!</h2>
-    <div class="buttons">
+    <div class="button-grid">
       <a href="turmas.html">Turmas</a>
       <a href="materias.html">Matérias</a>
       <a href="professores.html">Professores</a>
