--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,8 @@
   </header>
 
   <main>
-    <h2>Bem-vindo(a)!</h2>
+    <br>
+    <h2 style="text-align: center; margin-top: 1rem;">Bem-vindo(a)!</h2>
     <div class="button-grid">
       <a href="turmas.html">Turmas</a>
       <a href="materias.html">Matérias</a>
