--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Colégio Cooperativista de Poá</h1>
-    <button class="login-button">Voltar</button> 
+        <button class="login-button" onclick="index.html">Voltar</button>
   </header>
 
   <main>
