--- a/materias.html
+++ b/materias.html
@@ -9,145 +9,146 @@
 <body>
   <header>
     <h1>Colégio Cooperativista de Poá</h1>
-        <button class="login-button" onclick="window.location.href='menu.html'">Voltar</button>
+    <button class="login-button" onclick="window.location.href='menu.html'">Voltar</button>
   </header>
 
   <main>
-    
-     <h2>Matérias</h2>
-  <table id="materiasTable">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Descrição</th>
-        <th>Status</th>
-        <th>Ano Letivo</th>
-        <th>Ação</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+    <h2>Matérias</h2>
+    <table id="materiasTable">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Descrição</th>
+          <th>Status</th>
+          <th>Ano Letivo</th>
+          <th>Ação</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
 
-  <h3>Nova Matéria</h3>
-<input type="text" id="novaDescricao" placeholder="Descrição">
-<label>
-  <input type="checkbox" id="novaStatus" checked> Ativo
-</label>
-<input type="text" id="novoAnoLetivo" placeholder="Ano Letivo"> 
-<button onclick="criarmaterias()">Criar</button>
+    <h3>Nova Matéria</h3>
+    <input type="text" id="novaDescricao" placeholder="Descrição">
+    <label>
+      <input type="checkbox" id="novaStatus" checked> Ativo
+    </label>
+    <input type="text" id="novoAnoLetivo" placeholder="Ano Letivo"> 
+    <button onclick="criarmaterias()">Criar</button>
 
+    <!-- Toast container -->
+    <div id="toast-container"></div>
 
-  <!-- Toast container -->
-  <div id="toast-container"></div>
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/SEU_ID_DO_SCRIPT/exec';
+      const sheetName = 'materias'; // Nome da aba (sheet) que queremos acessar
 
-  <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbwigiuFpkH_xp_ahoy4AQbUnaDv_HSFk6yJjSEZY3xudDAqe8MNL1lO-H8o3lHBRdw4Wg/exec';
+      // Função para exibir o "toast" de sucesso/erro
+      function showToast(message, type = 'success') {
+        const container = document.getElementById('toast-container');
+        const toast = document.createElement('div');
+        toast.className = `toast ${type}`;
+        toast.innerText = message;
+        container.appendChild(toast);
+        setTimeout(() => {
+          toast.style.opacity = '0';
+          setTimeout(() => toast.remove(), 300);
+        }, 3000);
+      }
 
-    function showToast(message, type = 'success') {
-      const container = document.getElementById('toast-container');
-      const toast = document.createElement('div');
-      toast.className = `toast ${type}`;
-      toast.innerText = message;
-      container.appendChild(toast);
-      setTimeout(() => {
-        toast.style.opacity = '0';
-        setTimeout(() => toast.remove(), 300);
-      }, 3000);
-    }
+      // Função para carregar as matérias
+      function carregarmaterias() {
+        const url = `${scriptURL}?sheet=${sheetName}`; // Passando o nome da aba na URL
+        fetch(url)
+          .then(res => res.json())
+          .then(data => {
+            const tbody = document.querySelector('#materiasTable tbody');
+            tbody.innerHTML = '';
+            for (let i = 1; i < data.length; i++) {
+              const [id, descricao, status, anoLetivo] = data[i]; 
+              const row = document.createElement('tr');
+              row.innerHTML = `
+                <td>${id}</td>
+                <td><input type="text" value="${descricao}"></td>
+                <td><input type="checkbox" ${status === true ? 'checked' : ''}></td>
+                <td><input type="text" value="${anoLetivo ?? ''}"></td> 
+                <td>
+                  <button onclick="atualizar(
+                    ${id}, 
+                    this.closest('tr').children[1].children[0].value, 
+                    this.closest('tr').children[2].children[0].checked,
+                    this.closest('tr').children[3].children[0].value
+                  )">Salvar</button>
+                </td>
+              `;
+              tbody.appendChild(row);
+            }
+          })
+          .catch(error => {
+            console.error('Erro ao carregar materias:', error);
+            showToast("Erro ao carregar matérias!", "error");
+          });
+      }
 
-    function carregarmaterias() {
-      fetch(scriptURL)
-        .then(res => res.json())
-        .then(data => {
-          const tbody = document.querySelector('#materiasTable tbody');
-          tbody.innerHTML = '';
-          for (let i = 1; i < data.length; i++) {
-            const [id, descricao, status, anoLetivo] = data[i]; 
-            const row = document.createElement('tr');
-  row.innerHTML = `
-    <td>${id}</td>
-    <td><input type="text" value="${descricao}"></td>
-    <td><input type="checkbox" ${status === true ? 'checked' : ''}></td>
-    <td><input type="text" value="${anoLetivo ?? ''}"></td> 
-    <td>
-      <button onclick="atualizar(
-        ${id}, 
-        this.closest('tr').children[1].children[0].value, 
-        this.closest('tr').children[2].children[0].checked,
-        this.closest('tr').children[3].children[0].value
-      )">Salvar</button>
-    </td>
-  `;
-  tbody.appendChild(row);
-}
-
-        })
-        .catch(error => {
-          console.error('Erro ao carregar materias:', error);
-          showToast("Erro ao carregar matérias!", "error");
+      // Função para atualizar a matéria
+      function atualizar(id, descricao, status, anoLetivo) {
+        const params = new URLSearchParams({
+          action: 'update',
+          sheet: sheetName, // Passando o nome da aba aqui também
+          id,
+          description: descricao ?? '',
+          status: status ?? false,
+          anoLetivo: anoLetivo ?? ''
         });
-    }
 
-    function atualizar(id, descricao, status, anoLetivo) {
-  const params = new URLSearchParams({
-    action: 'update',
-    id,
-    description: descricao ?? '',
-    status: status ?? false,
-    anoLetivo: anoLetivo ?? ''
-  });
+        fetch(scriptURL, { method: 'POST', body: params })
+          .then(res => res.text())
+          .then(() => {
+            showToast("Matéria atualizada com sucesso!", "success");
+            carregarmaterias();
+          })
+          .catch(error => {
+            console.error('Erro ao atualizar materias:', error);
+            showToast("Erro ao atualizar matéria!", "error");
+          });
+      }
 
-  fetch(scriptURL, { method: 'POST', body: params })
-    .then(res => res.text())
-    .then(() => {
-      showToast("Matéria atualizada com sucesso!", "success");
-      carregarmaterias();
-    })
-    .catch(error => {
-      console.error('Erro ao atualizar materias:', error);
-      showToast("Erro ao atualizar matéria!", "error");
-    });
-}
+      // Função para criar nova matéria
+      function criarmaterias() {
+        const descricao = document.getElementById('novaDescricao').value;
+        const status = document.getElementById('novaStatus').checked;
+        const anoLetivo = document.getElementById('novoAnoLetivo').value;
 
+        if (!descricao) {
+          showToast("Descrição é obrigatória!", "error");
+          return;
+        }
 
-    function criarmaterias() {
-  const descricao = document.getElementById('novaDescricao').value;
-  const status = document.getElementById('novaStatus').checked;
-  const anoLetivo = document.getElementById('novoAnoLetivo').value;
+        const params = new URLSearchParams({
+          action: 'create',
+          sheet: sheetName, // Passando o nome da aba aqui também
+          description: descricao,
+          status,
+          anoLetivo
+        });
 
-  if (!descricao) {
-    showToast("Descrição é obrigatória!", "error");
-    return;
-  }
+        fetch(scriptURL, { method: 'POST', body: params })
+          .then(res => res.text())
+          .then(() => {
+            showToast("Matéria criada com sucesso!", "success");
+            document.getElementById('novaDescricao').value = '';
+            document.getElementById('novaStatus').checked = true;
+            document.getElementById('novoAnoLetivo').value = '';
+            carregarmaterias();
+          })
+          .catch(error => {
+            console.error('Erro ao criar materias:', error);
+            showToast("Erro ao criar matéria!", "error");
+          });
+      }
 
-  const params = new URLSearchParams({
-    action: 'create',
-    description: descricao,
-    status,
-    anoLetivo
-  });
-
-  fetch(scriptURL, { method: 'POST', body: params })
-    .then(res => res.text())
-    .then(() => {
-      showToast("Matéria criada com sucesso!", "success");
-      document.getElementById('novaDescricao').value = '';
-      document.getElementById('novaStatus').checked = true;
-      document.getElementById('novoAnoLetivo').value = '';
-      carregarmaterias();
-    })
-    .catch(error => {
-      console.error('Erro ao criar materias:', error);
-      showToast("Erro ao criar matéria!", "error");
-    });
-}
-
-
-    window.onload = carregarmaterias;
-  </script>
-</body>
-
-    
+      // Carregar as matérias ao carregar a página
+      window.onload = carregarmaterias;
+    </script>
   </main>
 
   <footer>
