--- a/turmas.html
+++ b/turmas.html
@@ -141,5 +141,8 @@
 
     window.onload = carregarTurmas;
   </script>
+    <footer>
+    <p>© 2025 Shiv BI. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
