--- a/materias.html
+++ b/materias.html
@@ -39,7 +39,7 @@
     <div id="toast-container"></div>
 
     <script>
-      const scriptURL = 'https://script.google.com/macros/s/SEU_ID_DO_SCRIPT/exec';
+      const scriptURL = 'hhttps://script.google.com/macros/s/AKfycbwigiuFpkH_xp_ahoy4AQbUnaDv_HSFk6yJjSEZY3xudDAqe8MNL1lO-H8o3lHBRdw4Wg/exec';
       const sheetName = 'materias'; // Nome da aba (sheet) que queremos acessar
 
       // Função para exibir o "toast" de sucesso/erro
