--- a/turmas.html
+++ b/turmas.html
@@ -70,8 +70,8 @@
       <button onclick="atualizar(
         ${id}, 
         this.closest('tr').children[1].children[0].value, 
-        this.closest('tr').children[2].children[0].checked,
-        this.closest('tr').children[3].children[0].value
+        this.closest('tr').children[2].children[0].value,
+        this.closest('tr').children[3].children[0].checked
       )">Salvar</button>
     </td>
   ;
